# librechat

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  ISSUES_PHASE1.md  README.md  ROADMAP.md  build.sh
.sqlx/: query-c93b38123d0a623596cfcaf14a467b9ba4c71b403264b289e0ecdd714cc51d08.json
docs/: chat-completions-route.md  chat-ui.md  css-design-system.md  frontend-api-integration.md  frontend-sse-streaming.md  openai-provider.md  persistent-chat-history.md  providers.md  server-health-check.md  settings-persistence.md  sqlite-persistence.md  static-file-serving.md  streaming-chat-completions-route.md
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  history.rs  lib.rs  sse.rs  state.rs
frontend/src/components/: chat.rs  settings.rs  sidebar.rs
frontend/style/: main.css
server/: Cargo.toml
server/migrations/: 1_initial_schema.sql  2_add_chat_metadata.sql  3_add_settings_schema.sql
server/src/: database.rs  lib.rs  main.rs  state.rs
server/src/providers/: mod.rs  openai.rs  types.rs
server/src/routes/: chat.rs  chat_stream.rs  error.rs  health.rs  history.rs  mod.rs  models.rs  settings.rs
server/tests/: chat_completions.rs  chat_completions_stream.rs  chat_ui.rs  conversation_history.rs  css_design_system.rs  database_persistence.rs  frontend_api_integration.rs  health_check.rs  openai_provider.rs  provider_trait_tests.rs  settings_persistence.rs  static_file_serving.rs  workspace_structure.rs
wiki/: chat-completions-route.md  chat-ui.md  css-design-system.md  frontend-api-integration.md  frontend-sse-streaming.md  openai-provider.md  persistent-chat-history.md  providers.md  server-health-check.md  settings-persistence.md  sqlite-persistence.md  static-file-serving.md  streaming-chat-completions-route.md
