[workspace]
members = ["server", "frontend"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
leptos = { version = "0.8", features = ["csr"] }
