[workspace]
members = ["server", "frontend"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
tower = "0.5"
http-body-util = "0.1"
async-trait = "0.1"
