[workspace]
members = ["server", "frontend"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "stream"] }
tower-http = { version = "0.6.10", features = ["cors", "fs", "trace"] }
leptos = { version = "0.8.19", features = ["csr"] }
wasm-bindgen = "0.2.121"
tower = "0.5.3"
http-body-util = "0.1.3"
async-trait = "0.1.89"
futures-util = "0.3.32"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
