[package]
name = "frontend"
version = "0.5.1"
edition = "2021"

[dependencies]
leptos = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["json"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "KeyboardEvent",
    "HtmlDivElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "ScrollToOptions",
    "Element",
    "HtmlTextAreaElement",
    "Window",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }

[lib]
crate-type = ["cdylib", "rlib"]
