[package]
name = "server"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tower-http = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
http = "1"
toml = "0.8"
regex = "1"
tempfile = "3"
